# ExerciseApp

./: README.md  docker-compose.yml
backendAPI/: dockerfile  pyproject.toml
backendAPI/src/: index.py
backendAPI/src/assets/: workouts.json
backendAPI/src/selector/: randomizer.py
frontend/: dockerfile
