[tool.poetry]
name = "exerciseapp"
version = "0.1.0"
description = "App to get you up off your feet WOH"
authors = [
    "Michael Linville"
]
packages = [
  { include = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
watchdog = "^6.0.0"

[tool.poetry.scripts]
start = "src.index:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
